2010-06-07  Hedayat Vatankhah  <hedayat@grad.com>

	* NEWS: 
	* RELEASE:
	- prepared for 0.2.1 release 
	
	* plugin/accelerometer/accelerometer.cpp:
	- reapply the filter to remain compatible with simspark-0.2 for RoboCup 2010
	 
	* cmake/FindODE.cmake: 
	- lookup in the directory specified in ODE_HOME env. variable instead of 
	  OGRE_HOME
	
	* plugin/accelerometer/CMakeLists.txt: 
	- fixed accelerometer installation on MacOSX
	
	* lib/oxygen/simulationserver/monitorlogger.h: 
	* lib/oxygen/simulationserver/monitorlogger.cpp:
	- request complete game information every 10 seconds so that it'll receive
	  new game state information 

2010-06-06  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/oxygen/monitorserver/monitorserver.h: 
	* lib/oxygen/monitorserver/monitorserver.cpp (MonitorServer::GetMonitorData):
	- more protection against simultaneous access (by monitor(s) and the logger)  

2010-06-05  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/oxygen/simulationserver/simulationserver.cpp (SimulationServer::Step): 
	- disabling the usleep call to retain full compatibility with the previous
	  versions
	  
	* RELEASE:
	- release notes for the next version (0.2.1)
	 
	* CMakeLists.txt: 
	- bumped library versions and package version for the next release

2010-05-09  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/zeitgeist/scriptserver/scriptserver.cpp (thisCall): 
	- Fixed a bug in number to pointer conversion in 64bit systems

2010-03-28  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/oxygen/monitorserver/monitorserver.h (MonitorServer): 
	* lib/oxygen/monitorserver/monitorserver.cpp (MonitorServer::GetMonitorData):
	- protect GetMonitorData() on simultaneous access
	 
	* lib/oxygen/physicsserver/int/sliderjointint.h: 
	* lib/oxygen/physicsserver/int/jointint.h: 
	* lib/oxygen/physicsserver/int/physicsobjectint.h:
	- fixed the shared_ptr.hpp include path
	 
	* plugin/odeimps/odejoint.cpp (JointImp::EnableFeedback):
	- removed extra cin/cout commands 
